--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Repositório da aula inicial de Testes de Software - Backend",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest"
+    
   },
   "keywords": [
     "Javascript",
@@ -14,5 +15,8 @@
     "Jest"
   ],
   "author": "Ana Carolina Freitas",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jest": "^30.0.5"
+  }
 }
